--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.20.2",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
