--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
